Web Inspector: UIProcess ASSERT in ~RemoteWebInspectorProxy when InspectorProcess crashes https://bugs.webkit.org/show_bug.cgi?id=179044

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-10-31
Reviewed by Alex Christensen.

* UIProcess/RemoteWebInspectorProxy.cpp:
(WebKit::RemoteWebInspectorProxy::frontendDidClose):
Add a protector to keep the proxy alive for the duration of this method.

Canonical link: https://commits.webkit.org/195205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224249 268f45cc-cd09-0410-ab3c-d52691b4dbfc